--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             </table>
         </div>
     </div>
+    <div id="masking" class="hidden">
+        <div id="infodiv">
+        </div>
+    </div>
     <footer>Designed and coded by <a href="https://www.linkedin.com/in/banjac275/">Nikola Stevanović</a></footer>
 </body>
 </html>
